[package]
name = "streamlette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
arrayref = "0.3.6"
async-io = "1.9.0"
async-trait = "0.1.58"
bytes = {version="1.2.1", features=["serde"]}
fastrand = "1.8.0"
futures-lite = "1.12.0"
itertools = "0.10.5"
serde = {version="1.0.147", features=["derive"]}
stdcode = "0.1.10"
tap = "1.0.1"
tmelcrypt = "0.2.4"
