[package]
name = "streamlette"
version = "0.2.6"
edition = "2021"
repository="https://github.com/themeliolabs/streamlette"
license="ISC"
description="Streamlet-based pluggable oneshot consensus"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
arrayref = "0.3.6"
async-io = "1.9.0"
async-trait = "0.1.58"
bytes = {version="1.2.1", features=["serde"]}
dashmap = "5.4.0"
env_logger = "0.9.1"
fastrand = "1.8.0"
futures-lite = "1.12.0"
hex = "0.4.3"
itertools = "0.10.5"
log = "0.4.17"
serde = {version="1.0.147", features=["derive"]}
smol = "1.2.5"
stdcode = "0.1.10"
tap = "1.0.1"
tmelcrypt = "0.2.4"


[target.'cfg(fuzzing)'.dependencies]
honggfuzz="0.5"
